[metadata]
name = kvdl
version = 0.1.6
author = Travis Brackett
author_email = travmeister@gmail.com
description = Download secrets from Keyvault
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/travislikestocode/keyvault-cert-downloader
project_urls =
    Bug Tracker = https://github.com/travislikestocode/keyvault-cert-downloader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pyyaml>=5.4.1
    azure-identity>=1.6.0
    azure-keyvault-secrets>=4.3.0
    cryptography>=3.4.7
    dbus-python>=1.2.16
    xattr>=0.9.7

[options.entry_points]
console_scripts =
    kvdl = kvdl.main:main
